tests/compile-fail/fixed_random_no_construction.stderr
error[E0599]: no function or associated item named `new` found for struct `FixedRandom<N>` in the current scope
  --> tests/compile-fail/fixed_random_no_construction.rs:11:35
   |
11 |     let _bad = FixedRandom::<32>::new([0u8; 32]);
   |                                   ^^^ function or associated item not found in `FixedRandom<32>`
   |
note: if you're trying to build a new `FixedRandom<32>` consider using one of the following associated functions:
      FixedRandom::<N>::generate
      FixedRandom::<N>::try_generate
  --> src/random/fixed_random.rs
   |
   |     pub fn generate() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub fn try_generate() -> Result<Self, OsError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `FixedRandom<32>: From<[u8; 32]>` is not satisfied
  --> tests/compile-fail/fixed_random_no_construction.rs:14:44
   |
14 |     let _bad2: FixedRandom<32> = [0u8; 32].into();
   |                                            ^^^^ the trait `From<[u8; 32]>` is not implemented for `FixedRandom<32>`
   |
   = note: required for `[u8; 32]` to implement `Into<FixedRandom<32>>`

error[E0308]: mismatched types
  --> tests/compile-fail/fixed_random_no_construction.rs:17:41
   |
17 |     let _bad3 = FixedRandom::<32>::from([0u8; 32]);
   |                 ----------------------- ^^^^^^^^^ expected `FixedRandom<32>`, found `[u8; 32]`
   |                 |
   |                 arguments to this function are incorrect
   |
   = note: expected struct `FixedRandom<32>`
               found array `[u8; 32]`
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn from(value: T) -> Self;
   |        ^^^^
